fix(ui): adjust auth-container on mobile- Increase padding-top from 13px to 24px for better spacing-Affects Sign In view on devices <=480px (Xiaomi A3)

--- a/frontend/src/auth/components/authPage/styles/authUI.module.css
+++ b/frontend/src/auth/components/authPage/styles/authUI.module.css
@@ -344,7 +344,7 @@ Estilo por defecto del checkbox
     min-height: 90vh;
     
     margin: 0;
-    padding: 0.8125rem 0.75rem 1.5rem 0.75rem;
+    padding: 1.5rem 0.75rem 1.5rem 0.75rem;
     gap:0.5rem;
 
     left: 0;
